--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#projects" class="main-btn">View my work</a>
         <div class="social">
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.facebook.com/sofyebnabbas/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-github"></i></a>
